# steamforlinux

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  render.yaml  requirements.txt  vercel.json
src/: main.py
src/mocks/: data.txt  games.json  steamapi_response copy.json  steamapi_response.json
src/models/: models.py
src/services/: script.py  steamApi.py  webscraping.py
src/static/: error.html  index.html  input.css  output.css  responseList.html  styles.css
src/steamforlinux/: main.py
src/templates/: error.html  index.html  responseList.html
tests/: __init__.py
